<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">SerialTerminal</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_serial_options">Serial Port Options</string>
    <string name="title_activity_port_select">Port Selection</string>
    <string name="title_activity_linkbus_add">Add a LinkBus Connection</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="apply">Apply</string>
    <string name="profil_name">Profil Name</string>
    <string name="addLB">Add a LinkBus</string>
    <string name="selectLB">Select a LinkBus</string>
    <string name="errorUnknown">An unknown error occurred...</string>
    <string name="errorNameExists">This name already exist...</string>
    <string name="errorNameInvalid">This name is invalid...</string>
    <string name="errorIPInvalid">This IP address is invalid...</string>
    <string name="errorScan">Scan Failed...</string>
    <string name="okScan">Scan Complete...</string>
    <string name="port_selected_none">No port selected</string>
    <string name="port_show">Port : </string>
    <string name="connect">Connect</string>
    <string name="device_not_found">Device not found, please check your connection...</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="bt_not_found">Bluetooth not supported</string>
    <string name="bt_enable">Bluetooth Enable...</string>
    <string name="usb_otg_enable">USB OTG Enable (restart required)...</string>
    <string name="scan_lb_unit_code">Scan QRCode below the LinkBus unit</string>
    <string name="see_devmel_url">\nSee http://www.devmel.com/linkbus\n</string>
    <string name="status">Status</string>
    <string name="clear">Clear</string>
    <string name="receive">Receive</string>
    <string name="transmit">Transmit</string>
    <string name="send">Send</string>
    <string name="options">Options</string>
    <string name="add">Add</string>
    <string name="enable_root_only">Enable (root only)</string>
    <string name="enable">Enable</string>
    <string name="baud_rate" translatable="false">Baud Rate</string>
    <string name="databits" translatable="false">Data Bits</string>
    <string name="stopbits" translatable="false">Stop Bits</string>
    <string name="parity" translatable="false">Parity</string>
    <string name="none" translatable="false">none</string>
    <string name="odd" translatable="false">odd</string>
    <string name="even" translatable="false">even</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="toggle_pulse" translatable="false">toggle pulse(100ms)</string>
    <string name="vtg" translatable="false">Voltage Target (VTG)</string>
</resources>
