<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/status" />

    <Button
        android:id="@+id/connectBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/connect" />

    <Button
        android:id="@+id/clearBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/clear" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/statusText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/connectBt"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive" />

        <EditText
            android:id="@+id/receiveText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50"
            android:background="#AAAAAA"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="bottom"
            android:inputType="textMultiLine|textNoSuggestions"
            android:isScrollContainer="true"
            android:minHeight="150dp" >
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transmit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/sendText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.96"
                android:ems="10" />

            <CheckBox
                android:id="@+id/checkCR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+CR" />

            <CheckBox
                android:id="@+id/checkLF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+LF" />

            <Button
                android:id="@+id/sendBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send" />
        </LinearLayout>

        <EditText
            android:id="@+id/transmitText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.30"
            android:background="#AAAAAA"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="bottom"
            android:inputType="textMultiLine|textNoSuggestions"
            android:isScrollContainer="true" />
    </LinearLayout>

    <Button
        android:id="@+id/optBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/connectBt"
        android:text="@string/options" />

    <Button
        android:id="@+id/initBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AT Init"
        android:layout_alignTop="@+id/clearBt"
        android:layout_toLeftOf="@+id/clearBt" />

</RelativeLayout>
